style: HomeView 및 공통 스타일 변경

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -6,6 +6,11 @@
 
 body {
   font-family: 'Noto Sans KR', sans-serif;
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  color: $color-black;
+  background-color: $color-orange;
 }
 
 input:focus {
@@ -13,13 +18,13 @@ input:focus {
 }
 
 a {
-  color: black;
+  color: $color-black;
   text-decoration: none;
   cursor: pointer;
 }
 
 a:visited {
-  color: black;
+  color: $color-black;
 }
 
 button {
