--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -67,7 +67,6 @@ embed,
 figure,
 figcaption,
 footer,
-header,
 hgroup,
 menu,
 nav,
@@ -93,7 +92,6 @@ details,
 figcaption,
 figure,
 footer,
-header,
 hgroup,
 menu,
 nav,
@@ -121,4 +119,8 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+body {
+  color: #313030;
 }
